# post-research-papers-to-slack

./: .env.example  .gitignore  Makefile  README.md  config.py  main.py  pyproject.toml  requirements.txt
database/: database.py
utils/: utilts.py
